[package]
name = "winapi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.7", features = ["combaseapi", "d3d11", "d3dcommon", "dwmapi", "objbase", "roapi", "winerror", "winstring", "winuser"] }
widestring = {version = "0.5.1"}